src/tests/fixtures/extend_type/nonAliasFirstArgumentType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class Query {
  // No fields
}

/** @gqlField */
export function greeting(query: { name: string }): string {
  return "Hello world!";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_type/nonAliasFirstArgumentType.invalid.ts:7:33 - error: Expected first argument of a `@gqlField` function to be typed as a `@gqlType` type.

7 export function greeting(query: { name: string }): string {
                                  ~~~~~~~~~~~~~~~~
